2007-04-27  Jonathan Chambers <joncham@gmail.com>
	
	Combined patch from Michael Jerris <mike@jerris.com> and me.
	* getopt.c: Added public domain implementation for Windows.
	* getopt.h: Added public domain implementation for Windows.
	* getopt_long.c: Added public domain implementation for Windows.
	* test_eglib.vcproj: Update project.
	* eglib.vcproj: Update project. Add pre-build step to copy
	winconfig.h to config.h for msvc build.
	
2007-04-25  Jonathan Chambers  <joncham@gmail.com>

	* mono.sln: Added eglib projects.
	* test_eglib.vcproj: Added.
	* pedump.vcproj: Change output directories for uniformity.
	* monodiet.vcproj: Change output directories for uniformity.

2007-04-24  Jonathan Chambers  <joncham@gmail.com>

	* eglib.vcproj: Added.

2007-03-30  Jonathan Chambers  <joncham@gmail.com>

	* libmono.vcproj, mono.vcproj: Reset browse information
	settings to default.
	
	Contributed under MIT/X11 license.
	
2007-03-25  Marek Safar  <marek.safar@gmail.com>

	* monodiet.vcproj, monodis.vcproj, monograph.vcproj, pedump.vsproj:
	Fixed build.

2007-03-19  Jonathan Chambers  <joncham@gmail.com>

	* libmono.vcproj, genmdesc.vcproj: Reset browse information
	settings to default.
	
	Contributed under MIT/X11 license.
	
2007-03-15  Jonathan Chambers  <joncham@gmail.com>

	* *.vcproj: Begin Win64 port. Run bat files with $(Platform) argument.
	* *.bat: Begin Win64 port. Run bat files with $(Platform) argument.
	Contributed under MIT/X11 license.

