@@ -1,3 +1,8 @@
+2007-05-13  Raja R Harinath  <harinath@gmail.com>
+
+	* Makefile.am (VCPROJS): New.
+	(EXTRA_DIST): Don't use glob.
+
 2007-04-27  Jonathan Chambers <joncham@gmail.com>
 	
 	Combined patch from Michael Jerris <mike@jerris.com> and me.
